# lacuna

./: .env.example  .envrc  .filigree.conf  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  INTEGRATION_LOG.md  Makefile  README.md  clarion.yaml  loomweave.yaml  pyproject.toml  wardline.yaml  weft.toml
.claude/: settings.json
.codex/: config.toml
.github/workflows/: deploy-site.yml
.wardline/: baseline.yaml
.weft/filigree/: .gitignore  config.json  federation_token  filigree.db
.weft/loomweave/: .gitignore  loomweave.db
docs/: CNAME  dogfood-findings-2026-06-11.md  dogfood-findings.md  matrix.md  tour.md
policy/: cells.toml
scripts/: characterize_mcp_attachment.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
specimen/: __init__.py  cli.py  colliding.py  cycle_a.py  cycle_b.py  dead_code.py  exception_flow.py  hub.py  nesting_bomb.py  pipeline.py  policy_boundaries.py  preview_sinks.py  repository.py  service.py  trust_flow.py  wardline_boundaries.py  wardline_sinks.py
specimen-rs/: CLAUDE.md  Cargo.toml
specimen_quarantine/: README.md  malformed_artifact.json  unparseable.py
tests/: test_capability.py  test_docs_gen.py  test_drive.py  test_manifest.py  test_mcp_attachment.py  test_policy_boundaries.py  test_report.py  test_specimen_imports.py  test_steps.py  test_steps_legis.py  test_steps_plainweave.py  test_steps_plainweave_coverage.py  test_steps_plainweave_coverage_integration.py  test_steps_plainweave_peerfacts.py  test_steps_plainweave_seed.py
tour/: __main__.py  capability.py  docs_gen.py  lacunae.toml  manifest.py  mcp_attachment.py  plainweave_seed.py  report.py  steps.py  wardline_peerfacts_seed.py
(+135 files in other folders)
