[project]
name = "lacuna"
version = "0.1.0"
description = "The MissingNo of the Loom suite — the deliberately-flawed reference specimen the suite is demonstrated against."
requires-python = ">=3.12"
# NOTE: the specimen's runtime trust markers come from `loom-markers`, and the
# scanner from `wardline`. Both are UNPUBLISHED (they live in /home/john/wardline)
# so they are installed editable-from-path in Step 2, NOT listed as registry deps.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["specimen", "tour"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
